objects/Staff_History__c.object
<CustomObject>
    <description>Each value instance (the application of a given attribute to a given Contact for a given period) will be tracked in this object. Many of the contents will be maintained exclusively in WD, and many will be maintained in SFDC.
Each record is typified by the Value Type of the attribute. 
Whether S&amp;O or the integration user may modify a given attribute is flagged in each record.</description>
    <fields>
        <fullName>Attribute_Category__c</fullName>
        <formula>TEXT(Value_Type__r.Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_ID__c</fullName>
        <label>Change ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkbox_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>SH{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Date_Value__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lookup_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup Value</label>
        <referenceTo>Program_Perspective__c</referenceTo>
        <relationshipName>Staff_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_Value__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Value__c</fullName>
        <label>Percent Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SH_Name__c</fullName>
        <formula>LEFT(
	Staff_Member__r.FirstName + &apos; &apos; + Staff_Member__r.LastName + &apos; - &apos; +  Value__c,
	80
)</formula>
        <label>SH Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Employee_User_Record__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.Employee_User_Record__r.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Staff Attributes</relationshipLabel>
        <relationshipName>Staff_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Text_Value__c</fullName>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Value Type</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Value Type you have selected is inactive.</errorMessage>
            <filterItems>
                <field>Value_Type__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Value_Type__c</referenceTo>
        <relationshipLabel>Staff Attributes</relationshipLabel>
        <relationshipName>Staff_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <formula>IF(NOT(ISBLANK(Lookup_Value__c)), Lookup_Value__r.Name + &apos; &apos;, &apos;&apos;) 
+ 
IF(NOT(ISBLANK(Text_Value__c)), Text_Value__c + &apos; &apos;, &apos;&apos;) 
+ 
IF(NOT(ISBLANK(Number_Value__c)), TEXT(Number_Value__c) + &apos; &apos;, &apos;&apos;) 
+ 
IF(NOT(ISBLANK(Percent_Value__c)), TEXT(Percent_Value__c * 100) + &apos;% &apos;, &apos;&apos;) 
+ 
IF(AND(NOT(ISBLANK(Date_Value__c))), TEXT(Date_Value__c) + &apos; &apos;, &apos;&apos;) 
+ 

IF(
	Checkbox_Value__c == true,
	&apos;Yes&apos;,
	
	IF (
		AND (
			Checkbox_Value__c == false,
			IF (
				AND (
					NOT(INCLUDES(Value_Type__r.Values_Permitted__c, &apos;Date&apos;)),
					NOT(INCLUDES(Value_Type__r.Values_Permitted__c, &apos;Number&apos;)),
					NOT(INCLUDES(Value_Type__r.Values_Permitted__c, &apos;Percentage&apos;)),
					NOT(INCLUDES(Value_Type__r.Values_Permitted__c, &apos;Text&apos;)),
					NOT(INCLUDES(Value_Type__r.Values_Permitted__c, &apos;Program Collection&apos;))
				),
				true,
				false
			)
		),
		&apos;No&apos;,
		&apos;&apos;
	)
)</formula>
        <label>Value</label>
        <type>Text</type>
    </fields>
    <label>Staff Attribute</label>
    <nameField>
        <label>Staff Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staff Attributes</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VR_Appropriate_Effective_Dates</fullName>
        <active>true</active>
        <description>The End date should be grater then Start date.</description>
        <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>The Start date cannot be later than the End date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Permitted_Value</fullName>
        <active>true</active>
        <description>The field chosen for entry must correspond to one of the Value Type’s Permitted Values</description>
        <errorConditionFormula>OR(
	AND(
		NOT(INCLUDES(Value_Type__r.Values_Permitted__c,&apos;Date&apos;)),
		NOT(ISBLANK(Date_Value__c))
	),AND(
		NOT(INCLUDES(Value_Type__r.Values_Permitted__c,&apos;Text&apos;)),
		NOT(ISBLANK(Text_Value__c))
	),AND(
		NOT(INCLUDES(Value_Type__r.Values_Permitted__c,&apos;Number&apos;)),
		NOT(ISBLANK(Number_Value__c))
	),AND(
		NOT(INCLUDES(Value_Type__r.Values_Permitted__c,&apos;Percentage&apos;)),
		NOT(ISBLANK(Percent_Value__c))
	),AND(
		NOT(INCLUDES(Value_Type__r.Values_Permitted__c,&apos;Program Collection&apos;)),
		NOT(ISBLANK(Lookup_Value__c))
	),AND(
		NOT(INCLUDES(Value_Type__r.Values_Permitted__c,&apos;Checkbox&apos;)),
		Checkbox_Value__c = True
        )

)</errorConditionFormula>
        <errorMessage>You must enter the appropriate value for this Value Type</errorMessage>
    </validationRules>
</CustomObject>